# cerul-app

./: .env.example  .gitignore  AGENT_API_V1_IMPLEMENTATION.md  CERUL_INDEXING_SEARCH_MODEL_BACKLOG.md  CONTRIBUTING.md  Cargo.toml  INDEXING_STATE_DRIFT_INVESTIGATION_2026_06_19.md  LICENSE  LOCAL_DATA_RESET_MODEL_CACHE_PLAN.md  NOTICE  PRIVACY.md  README.md  README.zh-CN.md  SECURITY.md  THEME_MIGRATION_PLAN.md  THIRD_PARTY_LICENSES.md  TRADEMARKS.md  UNIFIED_RETRIEVAL_INDEX_PLAN.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rebuild.sh  run.sh  rust-toolchain.toml
.claude-plugin/: marketplace.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  internal-update-test.yml  release.yml  security.yml  ytdlp-update.yml
apps/desktop/: index.html  overlay.html  package.json  vite.config.ts
apps/desktop/public/: menubar.html  menubar.js
apps/desktop/public/brand/: cerul.icns
apps/desktop/src/: App.tsx  OverlayApp.tsx  main.tsx  overlay.tsx  styles.css
apps/desktop/src/components/: FrameStrip.tsx  SplitStage.tsx  SummaryCard.tsx  account-sidebar.tsx  auth-modal.tsx  brand.tsx  bridge.tsx  cards.tsx  citation-card.tsx  clip-export-popover.tsx  core-banner.tsx  detail-issue-panel.tsx  document-evidence.tsx  indexing-strip.tsx  launch-splash.tsx  leaf.tsx  local-model-consent.tsx  onboarding-pickers.tsx  overlay-leaf.tsx  player.tsx  render-error-boundary.tsx  settings-quiet-notice.tsx  source-preview.tsx  source-row.tsx  transcript.tsx
apps/desktop/src/dialogs/: add-source-dialog.tsx  confirm-dialog.tsx  jobs-sheet.tsx
apps/desktop/src/lib/: api.ts  brand.ts  clipboard.ts  desktopHost.ts  detail.ts  electron-updater-controller.test.ts  formatters.test.ts  formatters.ts  i18n-catalog.ts  i18n.tsx  items.ts  jobs.test.ts  jobs.ts  last-opened.ts  library.test.ts  library.ts  managed-shares.test.ts  managed-shares.ts  overlay-recent-searches.ts  results.test.ts  results.ts  route.ts  (+13 more)
apps/electron-shell/: package.json  tsconfig.json
apps/electron-shell/scripts/: after-pack-sign.cjs  after-sign-strip-resource-xattrs.cjs  build.mjs  patch-dev-electron-name.mjs  sign-mlx-runtime.cjs  smoke-local-data-reset.mjs  stage-cerul-api.mjs  stage-cerul-core.mjs
apps/electron-shell/src/: agent-connect.ts  ipc.ts  local-data-reset.ts  main.ts  preload.ts  protocol.ts  updater.ts  window-security.ts  windows.ts
aside-replica/: index.html  meta.json
benchmarks/vector-db/: RESULTS.md  bench_vector_dbs.py  requirements.txt
bundled-models/: README.md
cerul-intro-video/: .gitignore  index.html  meta.json  package.json
crates/cerul-api/: Cargo.toml  build.rs
crates/cerul-api/src/: api_models.rs  jobs.rs  lib.rs  local_models.rs  local_runtime.rs  main.rs  models.rs  providers.rs  reset.rs  video_understanding.rs
crates/cerul-api/src/routes/: library.rs  mod.rs  settings.rs  v1.rs
crates/cerul-api/src/routes/v1/: models.rs  skill.rs  tests.rs
crates/cerul-cli/: Cargo.toml
crates/cerul-cli/src/: main.rs
crates/cerul-core/: Cargo.toml
crates/cerul-core/src/: lib.rs
crates/cerul-embed/: Cargo.toml
crates/cerul-embed/src/: downloads.rs  lib.rs
crates/cerul-models/: Cargo.toml
crates/cerul-models/src/: lib.rs
crates/cerul-pipeline/: Cargo.toml
crates/cerul-pipeline/src/: chunking.rs  ffmpeg.rs  lib.rs  mlx_sidecar.rs  run.rs  whisper.rs
crates/cerul-pipeline/src/stages/: document.rs  extract.rs  fetch.rs  mod.rs  ocr.rs  retrieval.rs  sample.rs  transcribe.rs
crates/cerul-search/: Cargo.toml
crates/cerul-search/src/: lib.rs
crates/cerul-sources/: Cargo.toml
crates/cerul-sources/src/: file_video.rs  folder_audio.rs  folder_document.rs  folder_image.rs  folder_video.rs  lib.rs  rss_podcast.rs  url_policy.rs  web_video.rs  youtube.rs
crates/cerul-storage/: Cargo.toml
crates/cerul-storage/migrations/: V0001__init.sql  V0002__embedding_profiles.sql  V0003__providers.sql  V0004__job_stages.sql  V0005__api_first_embedding_profiles.sql  V0006__video_understanding.sql  V0007__inference_usage_events.sql  V0008__cleanup_cloud_settings.sql  V0009__transcript_lines_fts_filter.sql  V0010__moments.sql  V0011__hot_path_indexes.sql  V0012__ignored_items.sql  V0013__ignored_item_raw_paths.sql  V0014__retrieval_units.sql  V0015__item_discovered_at.sql
crates/cerul-storage/src/: chunks.rs  items.rs  lib.rs  logs.rs  paths.rs  providers.rs  retrieval.rs  settings.rs  sqlite.rs  usage.rs  vectors.rs
crates/cerul-storage/tests/: smoke.rs
design/: cerul-full-redesign-verification-report.html  cerul-redesign-codex-验收报告.html
docs/: ZVEC_MIGRATION_PLAN.md  model-mirror.md  ui-review-implementation-progress.md
mlx-sidecar/: cerul_mlx_sidecar.py  requirements.txt  runtime-lock.txt
mlx-sidecar/spikes/: P0_RESULTS.md  README.md  RUNTIME_MATRIX_RESULTS.md  model_runtime_matrix.py  p0_validate_mlx_models.py  requirements-p0.txt  requirements-runtime-matrix.txt
plugins/cerul/.claude-plugin/: plugin.json
plugins/cerul/commands/: cerul.md  search.md
scripts/: ai-release-notes.sh  build-diff-report.cjs  build-fgh-report.cjs  build-installers.sh  build-mlx-runtime.sh  check-css-tokens.mjs  check-i18n-catalog.mjs  check-ytdlp-release.mjs  clean-dev-runtime.sh  corepack-pnpm.sh  diff-shots.cjs  dmg-bg.cjs  fetch-binaries.sh  fgh-after.cjs  fgh-shots.cjs  finalize-macos-release-artifacts.sh  load-env.sh  mirror-local-models.py  prepare-release.mjs  regenerate-macos-update-metadata.cjs  reset-local-data.sh  smoke-add-source-ui.sh  smoke-audio-image-sources.sh  smoke-boot-persistence-macos.sh  smoke-brand-assets-ui.sh  smoke-confirm-dialog-ui.sh  smoke-core-banner-ui.sh  smoke-daemon-autostart-linux.sh  smoke-daemon-autostart-macos.sh  smoke-daemon-autostart-windows.sh  smoke-detail-ui.sh  smoke-electron-shell.sh  smoke-electron-video-playback.sh  smoke-file-video-source.sh  smoke-first-run-ui.sh  smoke-folder-happy-path.sh  smoke-home-ui.sh  smoke-hotkey-overlay.sh  smoke-installed-app.sh  smoke-installed-hotkey-macos.sh  (+28 more)
(+26 files in other folders)
