[package]
name = "cerul-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = "0.7"
cerul-embed = { path = "../cerul-embed" }
cerul-models = { path = "../cerul-models" }
cerul-pipeline = { path = "../cerul-pipeline" }
cerul-search = { path = "../cerul-search" }
cerul-storage = { path = "../cerul-storage" }
cerul-sources = { path = "../cerul-sources" }
base64 = "0.22"
hound = "3.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json", "multipart"] }
rusqlite = "0.31"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing.workspace = true
utoipa = { version = "5", features = ["axum_extras"] }
keyring = "3"

[dev-dependencies]
tempfile = "3"
