[package]
name = "cerul-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
cerul-api = { path = "../cerul-api" }
cerul-models = { path = "../cerul-models" }
cerul-pipeline = { path = "../cerul-pipeline" }
cerul-search = { path = "../cerul-search" }
cerul-sources = { path = "../cerul-sources" }
cerul-storage = { path = "../cerul-storage" }
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
