[package]
name = "cerul-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
candle-core = "0.10.2"
fastembed = { version = "5.16.0", default-features = false, features = ["qwen3", "hf-hub-native-tls", "image-models", "ort-load-dynamic"] }
image = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
