[package]
name = "cerul-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
cerul-embed = { path = "../cerul-embed" }
cerul-models = { path = "../cerul-models" }
cerul-sources = { path = "../cerul-sources" }
cerul-storage = { path = "../cerul-storage" }
hound = "3.5"
kamadak-exif = "0.6"
num_cpus = "1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
whisper-rs = "0.16"

[dev-dependencies]
cerul-search = { path = "../cerul-search" }
image = "0.25"
tempfile = "3"
