[package]
name = "cerul-sources"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3 = "1"
cerul-models = { path = "../cerul-models" }
feed-rs = "2"
notify = "8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
shellexpand = "3"
tokio.workspace = true
tracing.workspace = true
walkdir = "2"

[dev-dependencies]
tempfile = "3"
