[package]
name = "cerul-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
cerul-models = { path = "../cerul-models" }
directories = "6"
refinery = { version = "0.8", default-features = false, features = ["rusqlite"] }
rusqlite = { version = "0.31", features = ["blob", "bundled", "chrono"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["v5"] }
zvec = { package = "zvec-safe", git = "https://github.com/cerul-ai/zvec-safe", rev = "829e63df60e5ee0509ac60f5e94308bc06e523d3", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
